# XyMusic

./: .editorconfig  .gitignore  LICENSE  README.md  install.sh
Client/XyMusicForAndroid/: .editorconfig  build.gradle.kts  gradle.properties  settings.gradle.kts
Client/XyMusicForAndroid/app/: build.gradle.kts  proguard-rules.pro
Client/XyMusicForAndroid/benchmark/: build.gradle.kts
Client/XyMusicForAndroid/domain/: build.gradle.kts
Client/XyMusicForAndroid/gradle/: libs.versions.toml
Client/XyMusicForWin/: index.html  package-lock.json  package.json  vitest.config.ts
Client/XyMusicForWin/scripts/: e2e-isolated.mjs
Client/XyMusicForWin/src/: App.vue  main.ts
Client/XyMusicForWin/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
Client/XyMusicForWin/src-tauri/capabilities/: default.json  desktop-lyrics.json
Client/XyMusicForWin/src-tauri/src/: credentials.rs  desktop_lyrics.rs  lib.rs  main.rs  media.rs  tray.rs  window.rs
Client/XyMusicForWin/tests/: architecture-boundaries.spec.ts  catalog-entrypoints.spec.ts  client-api-contract.spec.ts  desktop-lyrics-config.spec.ts  desktop-lyrics-store.spec.ts  desktop-lyrics-timeline.spec.ts  desktop-lyrics-ui.spec.ts  desktop-lyrics-window-placement.spec.ts  desktop-media-session.spec.ts  error-and-url.spec.ts  html-audio-player.spec.ts  library-cache.spec.ts  lyrics-timeline.spec.ts  setup.ts  (+15 more)
Server/AdminWeb/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
Server/Backend/: go.mod  go.sum
docs/: example.md  教程.md
(+1051 files in other folders)
