[package]
name = "xymusic-desktop"
version = "0.1.2"
description = "XyMusic Windows desktop client"
authors = ["muchen"]
license = "MIT"
repository = "https://github.com/muchenspace/XyMusic"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xymusic_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
keyring = { version = "3.6", features = ["windows-native"] }
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "=2.8.0"
tauri-plugin-notification = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Foundation",
  "Media",
  "Media_Playback",
  "Storage_Streams",
] }
